[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/Enemies.png" type="Texture" id=1]
[ext_resource path="res://enemies/SpearKnight.gd" type="Script" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 16 )

[node name="SpearKnight" type="KinematicBody2D" groups=["AffectedByClock", "AffectedByRosary"]]
collision_layer = 8
collision_mask = 65
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 1
playing = true

[node name="FloorCheck" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( -8, 16 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 6

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 6 )

[node name="FlipTimer" type="Timer" parent="."]
one_shot = true

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 4 )
enemyName = "Spear Knight"
damage = 2
points = 400
weakHits = 3
strongHits = 2
hitbox = NodePath("../Hitbox")
drop = "enemy"

[connection signal="hit" from="Hitbox" to="." method="_on_Hitbox_hit"]
[connection signal="hit_simon" from="Hitbox" to="." method="_on_Hitbox_hit_simon"]
[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
